# rustFaceCrop

./: Cargo.toml  Dockerfile  Instructions.md  README.md
src/: main.rs
