[package]
name = "rust-yolo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ort = { version = "=1.16.3", features = ["download-binaries"] }
image = "0.24"
imageproc = "0.23" # Add this line
ndarray = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"